--- a/contact.css
+++ b/contact.css
@@ -1,26 +1,40 @@
-body{
-    background-color: rgb(0, 10, 10);
-    color: white;
-    line-height:1.6;
-}
-header{
-    background-color: #000000;
-    padding:1px 1px;
-    position: top left , left , left , left , left;
-}
-nav ul{
-    list-style:none;
-    display:flex;
-    justify-content: center;
-    gap:2rem;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
 }
 
-nav a{
+body{
+    font-family: Arial, sans-serif;
+    background: #0d769f;
+    color: white;
+}
+.header{
+    background-color:#000;
+    padding: 20px;
+}
+.nav{
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+   
+}
+.logo{
+    color:white;
+}
+
+.nav-links{
+    list-style:none;
+    display:flex;
+    gap:40px;
+}
+
+.nav-links a{
     color:white;
     text-decoration:none;
     font-weight:bold;
-    position: top  left ,  left , left , left , left;
 }
+
 .contact-section{
     padding:40px;
     max-width: 600px;
@@ -53,9 +67,12 @@ nav a{
     border-radius:20px;
     color:white;
     background:#ff7b00;
-    font-sixe:16px;
+    font-size:16px;
     cursor:pointer;
 }
 .contact-form button:hover{
     background:#e06b00;
+}
+.footer{
+    color:black;
 }
